--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -5,19 +5,13 @@
     </div>
     <div class="col-12 w3-animate-right">
         <button type="button" class="btn btn-primary"
-            (click)="login('Login as Farmer')">{{'login.loginFarmer' | translate}}</button>
-    </div>
-    <div class="col-12 w3-animate-left">
-        <button type="button" class="btn btn-primary"
-            (click)="login('Login as Seller')">{{'login.loginSeller' | translate}}</button>
+            (click)="login('Login as User')">{{'login.loginUser' | translate}}</button>
     </div>
 </div>
 
 <ng-template #loginForm>
     <app-login-booth *ngIf="loginAs==='Login as Booth'" (cancel)="cancel()">
     </app-login-booth>
-    <app-login-seller *ngIf="loginAs==='Login as Seller'" (cancel)="cancel()">
-    </app-login-seller>
-    <app-login-farmer *ngIf="loginAs==='Login as Farmer'" (cancel)="cancel()">
-    </app-login-farmer>
+    <app-login-user *ngIf="loginAs==='Login as User'" (cancel)="cancel()">
+    </app-login-user>
 </ng-template>
