--- a/src/app/modules/dashboard/user/user.component.html
+++ b/src/app/modules/dashboard/user/user.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <app-welcome></app-welcome>
     <mat-accordion>
         <mat-expansion-panel class="accor w3-animate-top">
             <mat-expansion-panel-header class="accor-head">
