--- a/src/app/modules/dashboard/booth/booth.component.html
+++ b/src/app/modules/dashboard/booth/booth.component.html
@@ -1,1 +1,56 @@
-<app-welcome></app-welcome>
+<div class="container">
+    <app-welcome></app-welcome>
+    <mat-accordion>
+        <mat-expansion-panel class="accor w3-animate-top">
+            <mat-expansion-panel-header class="accor-head">
+                <mat-panel-title>
+                    {{'farmer.purchase' | translate}}
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <ng-template matExpansionPanelContent>
+                <div class="shop"><a [routerLink]="['/dashboard/shop']">Take me
+                        to the shop</a> &#8658;</div>
+            </ng-template>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="accor w3-animate-top">
+            <mat-expansion-panel-header class="accor-head">
+                <mat-panel-title>
+                    {{'farmer.sellRentAgri' | translate}}
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <ng-template matExpansionPanelContent>
+                <app-sell></app-sell>
+            </ng-template>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="accor w3-animate-top">
+            <mat-expansion-panel-header class="accor-head">
+                <mat-panel-title>
+                    {{'common.nearbyBooths' | translate}}
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <ng-template matExpansionPanelContent>
+                <app-nearby-booths></app-nearby-booths>
+            </ng-template>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="accor w3-animate-top">
+            <mat-expansion-panel-header class="accor-head">
+                <mat-panel-title>
+                    {{'common.viewWeather' | translate}}
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <ng-template matExpansionPanelContent>
+                <app-weather></app-weather>
+            </ng-template>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="accor w3-animate-top">
+            <mat-expansion-panel-header class="accor-head">
+                <mat-panel-title>
+                    {{'common.marketRate' | translate}}
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <ng-template matExpansionPanelContent>
+                <app-market-rates></app-market-rates>
+            </ng-template>
+        </mat-expansion-panel>
+    </mat-accordion>
+</div>
