--- a/src/app/shared/components/update-password/update-password.component.html
+++ b/src/app/shared/components/update-password/update-password.component.html
@@ -1,29 +1,29 @@
 <form class="col-xs-12" [formGroup]="updatePasswordForm"
     (ngSubmit)="onUpdatePass()">
-    <h2 style="text-align: center;">Update your password</h2>
+    <h2 style="text-align: center;">{{'updatePass.update' | translate}}</h2>
 
     <mat-form-field appearance="outline" class="mat-no-padding col-xs-12">
-        <mat-label>Enter your current password</mat-label>
+        <mat-label>{{'updatePass.enterCurr' | translate}}</mat-label>
         <input matInput formControlName="currentPass" type="text"
             autocomplete="current-password">
         <mat-error *ngIf="updatePasswordForm.controls['currentPass'].invalid">
-            Current password is required</mat-error>
+            {{'updatePass.currReq' | translate}}</mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="mat-no-padding col-xs-12">
-        <mat-label>Enter your new password</mat-label>
+        <mat-label>{{'updatePass.enterNew' | translate}}</mat-label>
         <input matInput formControlName="newPass" type="text"
             autocomplete="new-password">
         <mat-error *ngIf="updatePasswordForm.controls['newPass'].invalid">
-            New password is required</mat-error>
+            {{'updatePass.newReq' | translate}}</mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="mat-no-padding col-xs-12">
-        <mat-label>Re-enter your new password</mat-label>
+        <mat-label>{{'updatePass.reEnterNew' | translate}}</mat-label>
         <input matInput formControlName="confirmPass" type="text"
             autocomplete="new-password">
         <mat-error *ngIf="updatePasswordForm.controls['confirmPass'].invalid">
-            Passwords do not match</mat-error>
+            {{'updatePass.notMatch' | translate}}</mat-error>
     </mat-form-field>
 
     <div class="btns">
