--- a/src/app/modules/dashboard/nearby-booths/nearby-booths.component.html
+++ b/src/app/modules/dashboard/nearby-booths/nearby-booths.component.html
@@ -18,7 +18,7 @@
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>
             {{'nearBy.boothName' | translate}} </th>
-        <td mat-cell *matCellDef="let element"> {{element.booth.name}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.booth.boothName}} </td>
     </ng-container>
 
     <ng-container matColumnDef="dist">
