--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
                 <div class="item active">
                     <img src="./assets/images/farmer3.jpg" alt="First slide">
                     <!-- Static Header -->
-                    <div class="header-text hidden-xs">
+                    <div class="header-text">
                         <div class="col-md-12 text-center">
                             <h2>
                                 <span>{{'home.ourVision' | translate}}</span>
@@ -35,7 +35,7 @@
                 <div class="item">
                     <img src="./assets/images/farmer1.jpg" alt="Second slide">
                     <!-- Static Header -->
-                    <div class="header-text hidden-xs">
+                    <div class="header-text">
                         <div class="col-md-12 text-center">
                             <h2>
                                 <span>{{'home.ourVision' | translate}}</span>
@@ -51,7 +51,7 @@
                 <div class="item">
                     <img src="./assets/images/farmer2.jpg" alt="Third slide">
                     <!-- Static Header -->
-                    <div class="header-text hidden-xs">
+                    <div class="header-text">
                         <div class="col-md-12 text-center">
                             <h2>
                                 <span>{{'home.ourVision' | translate}}</span>
@@ -67,7 +67,7 @@
                 <div class="item">
                     <img src="./assets/images/farmer4.jpg" alt="Fourth slide">
                     <!-- Static Header -->
-                    <div class="header-text hidden-xs">
+                    <div class="header-text">
                         <div class="col-md-12 text-center">
                             <h2>
                                 <span>{{'home.ourVision' | translate}}</span>
