--- a/src/app/modules/dashboard/sell/sell.component.html
+++ b/src/app/modules/dashboard/sell/sell.component.html
@@ -1,1 +1,79 @@
-<p>sell works!</p>
+<form class="col-xs-10" [formGroup]="sellRentForm" style="margin-top: 50px;">
+
+    <mat-form-field appearance="outline" class="mat-no-padding col-xs-12">
+        <mat-label>Enter a title for your product</mat-label>
+        <input matInput formControlName="title">
+        <mat-error *ngIf="sellRentForm.controls['title'].invalid">
+            Title is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="mat-no-padding col-xs-12">
+        <mat-label>Enter description of your product</mat-label>
+        <textarea matInput formControlName="desc"></textarea>
+        <mat-error *ngIf="sellRentForm.controls['desc'].invalid">
+            Description is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="mat-no-padding col-xs-12">
+        <mat-label>Choose a category</mat-label>
+        <mat-select formControlName="category">
+            <mat-option value="" disabled>
+                Choose one</mat-option>
+            <mat-option value="fertAndPest">Fertilizers and Pesticides
+            </mat-option>
+            <mat-option value="seeds">Seeds
+            </mat-option>
+            <mat-option value="equipAndMach">Equipments and Machineries
+            </mat-option>
+        </mat-select>
+        <mat-error *ngIf="sellRentForm.controls['category'].invalid">
+            Category is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="mat-no-padding col-xs-12">
+        <mat-label>You want to</mat-label>
+        <mat-select formControlName="shop">
+            <mat-option value="" disabled>
+                Choose one</mat-option>
+            <mat-option value="sell">Sell
+            </mat-option>
+            <mat-option value="rent">Rent
+            </mat-option>
+        </mat-select>
+        <mat-error *ngIf="sellRentForm.controls['shop'].invalid">
+            Please choose</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="mat-no-padding col-xs-12">
+        <mat-label>Enter a price for your product</mat-label>
+        <input matInput formControlName="price" type="number">
+        <mat-error *ngIf="sellRentForm.controls['price'].invalid">
+            Price is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="mat-no-padding col-xs-12">
+        <mat-label>Enter unit of price for your product</mat-label>
+        <input matInput formControlName="unit" type="text">
+        <mat-error *ngIf="sellRentForm.controls['unit'].invalid">
+            Unit is required</mat-error>
+    </mat-form-field>
+
+    <div class="text-center">
+        <button mat-button class="btn btn-default profile"
+            (click)="imgFileInput.click()">Click to upload photos of your
+            product</button>
+        <input hidden type="file" #imgFileInput (change)="onFileSelect($event)"
+            style="display: none;" multiple />
+        <p><strong>{{'common.note' | translate}}</strong>{{'common.noteFile' | translate}}
+        </p>
+    </div>
+
+    <div class="images">
+        <div *ngFor="let image of uploadedImages; let index = index;" class="image">
+            <img [src]="image">
+            <i class="fa fa-times-circle-o close" aria-hidden="true"
+                (click)="removeImage(index)"></i>
+        </div>
+    </div>
+
+</form>
