--- a/src/app/modules/dashboard/booth/booth.component.html
+++ b/src/app/modules/dashboard/booth/booth.component.html
@@ -8,8 +8,7 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <ng-template matExpansionPanelContent>
-                <div class="shop"><a [routerLink]="['/dashboard/shop']">Take me
-                        to the shop</a> &#8658;</div>
+                <div class="shop"><a [routerLink]="['/dashboard/shop']">{{'shop.takeShop' | translate}}</a> &#8658;</div>
             </ng-template>
         </mat-expansion-panel>
         <mat-expansion-panel class="accor w3-animate-top">
