--- a/src/app/modules/dashboard/update-booth/update-booth.component.scss
+++ b/src/app/modules/dashboard/update-booth/update-booth.component.scss
@@ -35,9 +35,7 @@ hr {
 }
 
 .image {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  position: relative;
 }
 
 .image img {
@@ -50,4 +48,5 @@ hr {
 
 .close {
   font-size: 24px;
+  position: absolute;
 }
