--- a/src/app/modules/dashboard/update-user/update-user.component.scss
+++ b/src/app/modules/dashboard/update-user/update-user.component.scss
@@ -35,9 +35,7 @@ hr {
 }
 
 .image {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  position: relative;
 }
 
 .image img {
@@ -49,4 +47,5 @@ hr {
 
 .close {
   font-size: 24px;
+  position: absolute;
 }
