--- a/src/app/shared/components/success-dialog/success-dialog.component.html
+++ b/src/app/shared/components/success-dialog/success-dialog.component.html
@@ -11,6 +11,6 @@
     </div>
     <mat-dialog-actions align="center" class="text-center">
         <button mat-button (click)="onClose()"
-            class="btn btn-primary">Close</button>
+            class="btn btn-primary">{{'common.close' | translate}}</button>
     </mat-dialog-actions>
 </div>
