--- a/src/app/modules/dashboard/sell/sell.component.scss
+++ b/src/app/modules/dashboard/sell/sell.component.scss
@@ -28,3 +28,11 @@
   position: absolute;
   font-size: 24px;
 }
+
+.btns {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 35px;
+  justify-content: center;
+}
