--- a/src/app/modules/dashboard/sell/sell.component.html
+++ b/src/app/modules/dashboard/sell/sell.component.html
@@ -57,6 +57,7 @@
 
     <mat-form-field appearance="outline" class="mat-no-padding col-xs-12">
         <mat-label>{{'sellOrRent.enterUnit' | translate}}</mat-label>
+        <span matPrefix>per- &nbsp;</span>
         <input matInput formControlName="unit" type="text">
         <mat-error *ngIf="sellRentForm.controls['unit'].invalid">
             {{'sellOrRent.unitReq' | translate}}</mat-error>
