--- a/src/app/modules/dashboard/nearby-booths/nearby-booths.component.html
+++ b/src/app/modules/dashboard/nearby-booths/nearby-booths.component.html
@@ -36,7 +36,7 @@
                 [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
                 <div class="example-element-diagram">
                     <img
-                        [src]="'https://kisan-sewa-api.herokuapp.com/images/' + element.booth.picture">
+                        [src]="element.booth.picture">
                 </div>
                 <div class="example-element-description">
                     <tr>
