--- a/src/app/modules/dashboard/update-user/update-user.component.html
+++ b/src/app/modules/dashboard/update-user/update-user.component.html
@@ -73,7 +73,7 @@
         <div class="btns">
             <button mat-button class="btn btn-primary"
                 [disabled]="updateUserForm.invalid" type="submit"
-                (click)="onUpdate()">{{'register.register' | translate}}</button>
+                (click)="onUpdate()">{{'common.update' | translate}}</button>
             <button mat-button class="btn btn-default"
                 type="reset">{{'common.cancel' | translate}}</button>
         </div>
