--- a/src/app/modules/dashboard/rent/rent.component.html
+++ b/src/app/modules/dashboard/rent/rent.component.html
@@ -28,27 +28,27 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img [src]="'https://kisan-sewa-api.herokuapp.com/images/' + item.picture0"
+                        <img [src]="item.picture0"
                             alt="First image"
                             style="width: 300px; height: 350px; min-height: 350px;">
                     </div>
                     <div class="item" *ngIf="item.picture1">
-                        <img [src]="'https://kisan-sewa-api.herokuapp.com/images/' + item.picture1"
+                        <img [src]="item.picture1"
                             alt="Second image"
                             style="width: 300px; height: 350px; min-height: 350px;">
                     </div>
                     <div class="item" *ngIf="item.picture2">
-                        <img [src]="'https://kisan-sewa-api.herokuapp.com/images/' + item.picture2"
+                        <img [src]="item.picture2"
                             alt="Third image"
                             style="width: 300px; height: 350px; min-height: 350px;">
                     </div>
                     <div class="item" *ngIf="item.picture3">
-                        <img [src]="'https://kisan-sewa-api.herokuapp.com/images/' + item.picture3"
+                        <img [src]="item.picture3"
                             alt="Fourth image"
                             style="width: 300px; height: 350px; min-height: 350px;">
                     </div>
                     <div class="item" *ngIf="item.picture4">
-                        <img [src]="'https://kisan-sewa-api.herokuapp.com/images/' + item.picture4"
+                        <img [src]="item.picture4"
                             alt="Fifth image"
                             style="width: 300px; height: 350px; min-height: 350px;">
                     </div>
