update password corrcted with loader and input type

--- a/src/app/shared/components/update-password/update-password.component.html
+++ b/src/app/shared/components/update-password/update-password.component.html
@@ -4,7 +4,7 @@
 
     <mat-form-field appearance="outline" class="mat-no-padding col-xs-12">
         <mat-label>{{'updatePass.enterCurr' | translate}}</mat-label>
-        <input matInput formControlName="currentPass" type="text"
+        <input matInput formControlName="currentPass" type="password"
             autocomplete="current-password">
         <mat-error *ngIf="updatePasswordForm.controls['currentPass'].invalid">
             {{'updatePass.currReq' | translate}}</mat-error>
@@ -12,7 +12,7 @@
 
     <mat-form-field appearance="outline" class="mat-no-padding col-xs-12">
         <mat-label>{{'updatePass.enterNew' | translate}}</mat-label>
-        <input matInput formControlName="newPass" type="text"
+        <input matInput formControlName="newPass" type="password"
             autocomplete="new-password">
         <mat-error *ngIf="updatePasswordForm.controls['newPass'].invalid">
             {{'updatePass.newReq' | translate}}</mat-error>
@@ -20,7 +20,7 @@
 
     <mat-form-field appearance="outline" class="mat-no-padding col-xs-12">
         <mat-label>{{'updatePass.reEnterNew' | translate}}</mat-label>
-        <input matInput formControlName="confirmPass" type="text"
+        <input matInput formControlName="confirmPass" type="password"
             autocomplete="new-password">
         <mat-error *ngIf="updatePasswordForm.controls['confirmPass'].invalid">
             {{'updatePass.notMatch' | translate}}</mat-error>
