--- a/src/app/modules/dashboard/purchase/purchase.component.scss
+++ b/src/app/modules/dashboard/purchase/purchase.component.scss
@@ -20,6 +20,18 @@
   font-family: arial;
 }
 
+.carousel {
+  border-bottom: 1px solid gray;
+}
+
+h3{
+  font-weight: bold;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  cursor: pointer;
+}
+
 .price {
   color: grey;
   font-size: 22px;
