misc service, auth guard

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -14,7 +14,7 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-1">
 				<ul class="site-navigation nav">
-					<li [ngClass]="{active: router.url==='/'}">
+					<li [ngClass]="{active: router.url==='/home'}">
 						<a [routerLink]="['/']" data-toggle="collapse"
 							data-target=".navbar-1"><i class="fa fa-home"
 								aria-hidden="true"
